IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2/15/09: Added structure for avoiding artifacts when writing to one file from
multiple computers, implemented it for Tilt/Splittilt and Ctfphaseflip/Splitcorrection.

2/15/09: Added details on the contents of the extended header and commands for
extracting data to Header program output.

2/15/09: Added options to Alterheader to set pixel spacing from pixel size in
FEI/Agard style extended header, and to invert sign of origin.  Wrote proper
man page for Alterheader.

2/15/09: Fixed problem with getting max coordinates in Point2model (In 3.13).

2/15/09: Fixed geometry problems in model view object edit and object list 
windows.

2/12/09: In Etomo got rid of the exception that is added to the etomo log when
header is used to read a file that doesn't exist.

2/12/09: In Etomo - Tomogram Generation saved the trial tomogram names in the
combo box.

2/12/09: In Etomo - Setup Tomogram popping up an error message if Frame Type is
incorrect.

2/10/09: In Etomo recalculated trimvol parameters when the size of the file
being trimmed has been changed since last time trimvol was run.  A warning
message is displayed when this is done.

2/5/09: In Etomo added more error checking to the PEET interface.

2/2/09: Sychronize all on/off buttons when meshing turns an object on (In 
3.13).

1/26/09: Fixed right-click popup menu on Final Aligned Stack panel (In 3.13).

1/26/09: Fixed eTomo reporting of error messages from Ctfplotter (In 3.13).

1/25/09: IMOD_4-0-3
1/25/09: Fixed a bug in Flattenwarp in handling non-planar contours.

1/23/09: Fixed size of current point sphere in model view if data loaded with
binning (In 3.13).

1/23/09: Processchunks now prevents etomo from dropping machines until at
least one chunk has succeeded.

1/21/09: Matchshifts makes sure solve.xf is readable by owner to solve problem
on Vista when files appear to have no permissions to cygwin (In 3.13).
